# Smmalloc-CSharp

./: README.md
Source/Managed/: Smmalloc-CSharp.csproj  Smmalloc.cs
Source/Native/: CMakeLists.txt  smmalloc.cpp  smmalloc.h
